--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="app">
        <div v-html= 'message' >
        </div>
-       <img   v-bind:src="foto" alt="">
+       <img   v-bind:src="foto" :alt="altfoto">
 
     </div>
 
