--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 <body>
     <div id="app">
-       <div v-html= 'message' >
-       </div>
-       <img   v-bind:src="foto" :alt="altfoto">
+       <div v-html= 'message'></div>
+       <div v-html="messageTwo" ></div>
+       <div v-html="mexFoto"></div>
+       <img :src="foto" :alt="altfoto">
 
     </div>
 
